# docmind

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mise.toml  pyproject.toml
deploy/: cloudrun.yaml
src/: agent.py  config.py  ingest.py  main.py  retrieve.py  routes.py  storage.py  watcher.py
static/: docs.html
